--- a/index.html
+++ b/index.html
@@ -2,27 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Register Coming Soon</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: #222;
-            color: #fff;
-        }
-
-        h1 {
-            font-size: 3rem;
-        }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>13th ASEAN Ministerial Meeting</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <h1>Registration Opens Soon!</h1>
+<body class="bg-[#000022] min-h-screen flex items-center justify-center p-4">
+    <div class="w-full max-w-3xl">
+        <img src="image_cover.jpg" alt="13th ASEAN Ministerial Meeting Poster"
+            class="w-full h-auto rounded-lg shadow-lg" />
+        <div class="bg-yellow-300 text-black mt-4 p-4 rounded-lg text-center text-base sm:text-lg">
+            "The registration link will be updated shortly. Please check back soon."
+        </div>
+    </div>
 </body>
 
 </html>
